--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,146 +1,47 @@
 {
-    // Configure editor to insert spaces when pressing Tab
-    "editor.insertSpaces": true,
-    // Set the number of spaces per tab
-    "editor.tabSize": 2,
-    // Display vertical rulers at specified character column for readability
-    "editor.rulers": [100],
-    // Set the default file encoding to UTF-8
-    "files.encoding": "utf8",
-    // Use Unix-style line endings ('\n') by default
-    "files.eol": "\n",
-    // Ensure a final newline at the end of files
-    "files.insertFinalNewline": true,
-    // Trim final newlines at the end of files
-    "files.trimFinalNewlines": true,
-    // Remove any trailing whitespace on save
-    "files.trimTrailingWhitespace": true,
-    // Select read-only files
-    "files.readonlyInclude": {
-        "**/.elan/**": true,
-        "**/.lake/**": true
+    "files.exclude": {
+        "**/.git": true,
+        "**/.lake": true,
+        "**/.github": true,
+        "**/.DS_Store": true,
+        "**/*.olean": true,
+        "**/.DS_yml": true,
+        "**/.gitpod.yml": true,
+        "**/.vscode": true,
+        "lakefile.toml": true,
+	".docker": true,
+	"build": true,
+	"home_page": true,
+	"scripts": true,
+	"html": true,
+	"lake-packages": true,
+	".gitignore": true,
+	"lake-manifest.json": true,
+	"*.md": true,
+	"lakefile.lean": true,
+    "FLT3.lean": true,
+	"lean-toolchain": true,
+	"mathematics_in_lean.pdf": true,
+	"MIL.lean": true,
+    "LICENSE":true,
+    ".devcontainer":true,
+    "lean-tactics.tex":true,
     },
-    "latex-workshop.latex.tools": [
-        {
-            "name": "latexmk",
-            "command": "latexmk",
-            "args": [
-                "-cd",
-                "%WORKSPACE_FOLDER%/blueprint/src/print.tex"
-            ],
-            "env": {}
-        },
-        {
-            "name": "lualatexmk",
-            "command": "latexmk",
-            "args": [
-                "-synctex=1",
-                "-interaction=nonstopmode",
-                "-file-line-error",
-                "-lualatex",
-                "-outdir=%OUTDIR%",
-                "%DOC%"
-            ],
-            "env": {}
-        },
-        {
-            "name": "xelatexmk",
-            "command": "latexmk",
-            "args": [
-                "-synctex=1",
-                "-interaction=nonstopmode",
-                "-file-line-error",
-                "-xelatex",
-                "-outdir=%OUTDIR%",
-                "%DOC%"
-            ],
-            "env": {}
-        },
-        {
-            "name": "latexmk_rconly",
-            "command": "latexmk",
-            "args": [
-                "%DOC%"
-            ],
-            "env": {}
-        },
-        {
-            "name": "pdflatex",
-            "command": "pdflatex",
-            "args": [
-                "-synctex=1",
-                "-interaction=nonstopmode",
-                "-file-line-error",
-                "%DOC%"
-            ],
-            "env": {}
-        },
-        {
-            "name": "bibtex",
-            "command": "bibtex",
-            "args": [
-                "%DOCFILE%"
-            ],
-            "env": {}
-        },
-        {
-            "name": "rnw2tex",
-            "command": "Rscript",
-            "args": [
-                "-e",
-                "knitr::opts_knit$set(concordance = TRUE); knitr::knit('%DOCFILE_EXT%')"
-            ],
-            "env": {}
-        },
-        {
-            "name": "jnw2tex",
-            "command": "julia",
-            "args": [
-                "-e",
-                "using Weave; weave(\"%DOC_EXT%\", doctype=\"tex\")"
-            ],
-            "env": {}
-        },
-        {
-            "name": "jnw2texminted",
-            "command": "julia",
-            "args": [
-                "-e",
-                "using Weave; weave(\"%DOC_EXT%\", doctype=\"texminted\")"
-            ],
-            "env": {}
-        },
-        {
-            "name": "pnw2tex",
-            "command": "pweave",
-            "args": [
-                "-f",
-                "tex",
-                "%DOC_EXT%"
-            ],
-            "env": {}
-        },
-        {
-            "name": "pnw2texminted",
-            "command": "pweave",
-            "args": [
-                "-f",
-                "texminted",
-                "%DOC_EXT%"
-            ],
-            "env": {}
-        },
-        {
-            "name": "tectonic",
-            "command": "tectonic",
-            "args": [
-                "--synctex",
-                "--keep-logs",
-                "--print",
-                "%DOC%.tex"
-            ],
-            "env": {}
-        }
-    ],
-    "latex-workshop.latex.outDir": "%WORKSPACE_FOLDER%/blueprint/print"
+    "editor.minimap.enabled": false,
+    "editor.acceptSuggestionOnEnter": "off",
+    "scm.diffDecorationsGutterVisibility": "hover",
+    "editor.semanticHighlighting.enabled": true,
+    "editor.semanticTokenColorCustomizations": {
+        "[Default Light+]": {"rules": {"variable": "#1a31da"}}
+    },
+    "editor.unicodeHighlight.nonBasicASCII": false,
+    "editor.unicodeHighlight.ambiguousCharacters": false,
+    "editor.fontLigatures": true,
+    "files.trimTrailingWhitespace": true,
+    "files.trimFinalNewlines": true,
+    "lean4.infoview.emphasizeFirstGoal": true,
+    "editor.rulers" : [100],
+    "lean4.infoview.showExpectedType": false
 }
+
+
