--- a/home_page/_config.yml
+++ b/home_page/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Numbers
+title: A journey to the world of Numbers
 #email: your-email@example.com
 description: by Riccardo Brasca and Shanwen Wang
 baseurl: "" # the subpath of your site, e.g. /blog
