--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,16 @@
 	"build": true,
 	"home_page": true,
 	"scripts": true,
+	"blueprint/print": true,
+	"blueprint/web": true,
+	"blueprint/.gitignore": true,
+	"blueprint/src/macros": true,
+	"blueprint/src/print.*": true,
+	"blueprint/src/web.*": true,
+	"blueprint/src/*.css": true,
+	"blueprint/src/*.cfg": true,
+	"blueprint/src/latexmkrc": true,
+	"blueprint/src/blueprint.sty": true,
 	"html": true,
 	"lake-packages": true,
 	".gitignore": true,
