--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -29,7 +29,7 @@ jobs:
         run: ~/.elan/bin/lake exe cache get || true
 
       - name: Build project
-        run: ~/.elan/bin/lake build LHCP
+        run: ~/.elan/bin/lake build Numbers
 
       - name: Cache build artifacts and API docs
         uses: actions/cache@v4
@@ -40,7 +40,7 @@ jobs:
           restore-keys: LakeBuild-
 
       - name: Build project API documentation
-        run: ~/.elan/bin/lake -R -Kenv=dev build LHCP:docs
+        run: ~/.elan/bin/lake -R -Kenv=dev build Numbers:docs
 
       - name: Check for `home_page` folder # this is meant to detect a Jekyll-based website
         id: check_home_page
